<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnRegistrarE"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".capalogica.CrearEnfermedadActivity">

    <TextView
        android:id="@+id/textVolverE2"
        android:layout_width="73dp"
        android:layout_height="31dp"
        android:text="@string/volver"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarEnfermedad" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="228dp"
        android:layout_height="38dp"
        android:text="@string/afecta_al"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <Spinner
        android:id="@+id/cmbAfecta"
        android:layout_width="236dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:entries="@array/afecta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnRegistrarEnfermedad"
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="56dp"
        android:text="@string/registrar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmbAfecta"
        app:layout_constraintVertical_bias="0.627" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="228dp"
        android:layout_height="38dp"
        android:text="@string/compuesto_a_evitar"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Spinner
        android:id="@+id/cmbEvitar"
        android:layout_width="236dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:entries="@array/evitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="101dp"
        android:layout_height="31dp"
        android:text="@string/nombre"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <EditText
        android:id="@+id/txtRegNombreE"
        android:layout_width="196dp"
        android:layout_height="55dp"

        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nombrehint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="208dp"
        android:layout_height="89dp"
        android:text="@string/registro_de_enfermedad"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="92dp"
        android:layout_height="89dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconenfermedad" />
</androidx.constraintlayout.widget.ConstraintLayout>